--- a/demo/src/tsconfig.packaged.json
+++ b/demo/src/tsconfig.packaged.json
@@ -1,8 +1,8 @@
 {
-  "extends": "../../../tsconfig.packaged.json",
+  "extends": "../../tsconfig.packaged.json",
   "compilerOptions": {
     "skipLibCheck": true,
-    "outDir": "../../../dist/apps/demo"
+    "outDir": "../../dist/apps/demo"
 },
   "files": [
     "main.ts",
