--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "copyhtml": "copy 'src/app/cron-editor/*.html' './components/cron-editor/'",
@@ -47,6 +46,9 @@
     "@angular/platform-browser": "~13.3.1",
     "@angular/platform-browser-dynamic": "~13.3.1",
     "@angular/router": "~13.3.1",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
+    "cron-editor": "file:dist/cron-editor/cron-editor-0.0.1.tgz",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
