--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
     "build": "ng build",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "pack-install": "ng build cron-editor && cd dist/cron-editor && npm pack && cd ../../ && npm install dist/cron-editor/cardiosmircem-ngx-cron-editor-1.0.2.tgz && rm -rf .angular && ng serve -o",
-    "pub": "cd libs/cron-editor && npm publish --access public" 
+    "pack-install": "ng build cron-editor && cd dist/cron-editor && npm pack && cd ../../ && npm install dist/cron-editor/cardiosmircem-ngx-cron-editor-1.0.3.tgz && rm -rf .angular && ng serve -o",
+    "pub": "cd libs/cron-editor && npm publish --access public"
   },
   "dependencies": {
-    "@angular/animations": "~13.3.1",
-    "@angular/cdk": "~13.3.1",
-    "@angular/common": "~13.3.1",
-    "@angular/compiler": "~13.3.1",
-    "@angular/core": "~13.3.1",
+    "@angular/animations": "^14.2.7",
+    "@angular/cdk": "^13.3.1",
+    "@angular/common": "^14.2.7",
+    "@angular/compiler": "^14.2.7",
+    "@angular/core": "^14.2.7",
     "@angular/flex-layout": "^13.0.0-beta.38",
-    "@angular/forms": "^13.3.1",
+    "@angular/forms": "^14.2.7",
     "@angular/material": "^13.3.1",
-    "@angular/platform-browser": "~13.3.1",
-    "@angular/platform-browser-dynamic": "~13.3.1",
-    "@angular/router": "~13.3.1",
-    "@cardiosmircem/ngx-cron-editor": "file:dist/cron-editor/cardiosmircem-ngx-cron-editor-1.0.2.tgz",
+    "@angular/platform-browser": "^14.2.7",
+    "@angular/platform-browser-dynamic": "^14.2.7",
+    "@angular/router": "^14.2.7",
+    "@cardiosmircem/ngx-cron-editor": "file:dist/cron-editor/cardiosmircem-ngx-cron-editor-1.0.3.tgz",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "rxjs": "~7.4.0",
@@ -29,11 +29,11 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.1",
-    "@angular-devkit/core": "^13.3.1",
-    "@angular/cli": "~13.3.1",
-    "@angular/compiler-cli": "^13.3.1",
-    "@angular/language-service": "^13.3.1",
+    "@angular-devkit/build-angular": "^14.2.6",
+    "@angular-devkit/core": "^14.2.6",
+    "@angular/cli": "^14.2.6",
+    "@angular/compiler-cli": "^14.2.7",
+    "@angular/language-service": "^14.2.7",
     "@types/jasmine": "~3.7.7",
     "@types/jasminewd2": "^2.0.9",
     "@types/node": "^15.12.4",
@@ -47,12 +47,12 @@
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.6.0",
-    "ng-packagr": "^13.3.0",
+    "ng-packagr": "^14.2.1",
     "protractor": "~7.0.0",
     "scss-bundle": "^3.1.2",
     "standard-version": "^9.3.0",
     "ts-node": "~10.0.0",
     "tslint": "~6.1.3",
-    "typescript": "~4.4.2"
+    "typescript": "~4.8.4"
   }
 }
