--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
   "name": "ngx-cron-editor",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "pack-install": "ng build cron-editor && cd dist/cron-editor && npm pack && cd ../../ && npm install dist/cron-editor/cardiosmircem-ngx-cron-editor-1.0.9.tgz && rm -rf .angular && ng serve -o",
-    "pub": "cd libs/cron-editor && npm publish --access public"
+    "pack-install": "ng build cron-editor && cd dist/cron-editor && npm pack && cd ../../ && npm install dist/cron-editor/cardiosmircem-ngx-cron-editor-1.0.10.tgz && rm -rf .angular && ng serve -o",
+    "pub": "cd libs/cron-editor && npm publish --access public",
+    "update-docs": "rm -rf docs/* && ng build && mv dist/apps/demo/* docs/"
   },
   "dependencies": {
-    "@angular/animations": "^17.0.6",
+    "@angular/animations": "^18.0.5",
     "@angular/cdk": "^17.0.3",
-    "@angular/common": "^17.0.6",
-    "@angular/compiler": "^17.0.6",
-    "@angular/core": "^17.0.6",
-    "@angular/forms": "^17.0.6",
+    "@angular/common": "^18.0.5",
+    "@angular/compiler": "^18.0.5",
+    "@angular/core": "^18.0.5",
+    "@angular/forms": "^18.0.5",
     "@angular/material": "^17.0.3",
-    "@angular/platform-browser": "^17.0.6",
-    "@angular/platform-browser-dynamic": "^17.0.6",
-    "@angular/router": "^17.0.6",
-    "@cardiosmircem/ngx-cron-editor": "file:dist/cron-editor/cardiosmircem-ngx-cron-editor-1.0.9.tgz",
+    "@angular/platform-browser": "^18.0.5",
+    "@angular/platform-browser-dynamic": "^18.0.5",
+    "@angular/router": "^18.0.5",
+    "@cardiosmircem/ngx-cron-editor": "file:dist/cron-editor/cardiosmircem-ngx-cron-editor-1.0.10.tgz",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "rxjs": "~7.4.0",
@@ -29,11 +30,11 @@
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.6",
+    "@angular-devkit/build-angular": "^18.0.6",
     "@angular-devkit/core": "^17.0.6",
     "@angular/cli": "^17.0.6",
-    "@angular/compiler-cli": "^17.0.6",
-    "@angular/language-service": "^17.0.6",
+    "@angular/compiler-cli": "^18.0.5",
+    "@angular/language-service": "^18.0.5",
     "@types/jasmine": "~3.7.7",
     "@types/jasminewd2": "^2.0.9",
     "@types/node": "^15.12.4",
@@ -47,12 +48,12 @@
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.6.0",
-    "ng-packagr": "^17.0.2",
+    "ng-packagr": "^18.0.0",
     "protractor": "~7.0.0",
     "scss-bundle": "^3.1.2",
     "standard-version": "^9.3.0",
     "ts-node": "~10.0.0",
     "tslint": "~6.1.3",
-    "typescript": "~5.2.2"
+    "typescript": "~5.4.5"
   }
 }
